# CSSI

./: LICENSE  README.md
indexing/: README.md  cssi.py  twitter.csv
indexing/twitter_dataset/: README.md  a_ld.txt  b.txt  maxes.txt
indexing/twitter_indexes/: README.md  ca.txt  cao.txt  cb.txt  comb.txt  dm.txt  misc.txt  raos.txt  ras.txt  rbs.txt
querying/: make_code.sh
querying/src/: CMakeLists.txt  main.cpp
querying/src/algorithm/: algorithm.cpp  algorithm.hpp
querying/src/csi3/: CMakeLists.txt  csi3.cpp  csi3.hpp
querying/src/csia3/: CMakeLists.txt  csia3.cpp  csia3.hpp
querying/src/rtree/: CMakeLists.txt  RTree.h  rtreealg.cpp  rtreealg.hpp  rtreeindex.hpp  rtreeindex_impl.hpp
querying/src/s2r/: CMakeLists.txt  RTree.h  s2r.cpp  s2r.hpp  s2rindex.hpp  s2rindex_impl.hpp
querying/src/scan/: CMakeLists.txt  scan.cpp  scan.hpp
querying/src/util/: CMakeLists.txt  MBRPriorityQueue.hpp  NodePriorityQueue.hpp  commons.cpp  commons.hpp  constants.hpp  inputReader.cpp  inputReader.hpp  outputwriter.cpp  outputwriter.hpp  topkPriorityQueue.hpp  topkPriorityQueue2.hpp
